<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_register">S\'inscrire</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="info_prenom">Prénom</string>
    <string name="info_nom">Nom</string>
    <string name="info_courriel">Courriel</string>
    <string name="info_cellulaire">No. Cellulaire</string>
    <string name="info_none">-</string>
    <string name="info_save">Enregistrer les informations</string>
    <string name="info_mdp">Mot de passe</string>
    <string name="info_cmdp">Confirmer le mot de passe</string>
    <string name="info_amdp">Mot de passe actuel</string>
    <string name="info_matricule">Matricule</string>

    <string name="login_createaccount">Vous n\'avez pas de compte? <u>Créez-en un ici!</u></string>

    <string name="account_modification">Modifier mes informations</string>
    <string name="account_modification_password">Modifier mon mot de passe</string>

    <string name="ok_text">Supprimer</string>


    <string-array name="liste_services">
        <item>•   Subventions</item>
        <item>•   Livres usagés</item>
        <item>•   Journal La Gifle</item>
        <item>•   Projets étudiants</item>
        <item>•   Comité Pouce vert - Environnement</item>
        <item>•   Photocopies / impressions</item>
        <item>•   Défense pédagogique</item>
        <item>•   Activités étudiantes</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
