<?xml version="1.0" encoding="utf-8"?>
<!-- JEREMY LAMPRON -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_prenom" />

        <EditText
            android:id="@+id/txttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textShortMessage"
            android:text="@string/info_none"
            android:textColor="@android:color/black"
            android:maxLength="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nom" />

        <EditText
            android:id="@+id/txttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/info_none"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCellulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No. Cellulaire" />

        <EditText
            android:id="@+id/tbCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/info_none"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCourriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Courriel" />

        <EditText
            android:id="@+id/tbCourriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/info_none"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/account_modification"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btModifPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/account_modification_password"
            android:textColor="@color/blanc" />

    </LinearLayout>
</LinearLayout>
